--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "electron desktop",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "chcp 65001 && electron ." 
   },
   "keywords": [
     "electron",
